<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.iwanna.learn.view.activity.RegistActivity">

    <include layout="@layout/layout_topview"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/nickname"/>
        <EditText
            android:id="@+id/ed_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:background="@color/transparent"
            android:hint="@string/pl_input_nickname"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/phone"/>
        <EditText
            android:id="@+id/ed_phone"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:background="@color/transparent"
            android:hint="@string/pl_input_phone"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/vercode"/>
        <EditText
            android:id="@+id/ed_vercode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:singleLine="true"
            android:background="@color/transparent"
            android:hint="@string/pl_input_vercode"/>
        <TextView
            android:id="@+id/tv_getvercode"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_content"
            android:textColor="@color/bt_enable"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:gravity="center"
            android:background="@drawable/bt_enable_select"
            android:text="@string/get_vercode"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/ed_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:background="@color/transparent"
            android:hint="@string/pl_input_login_pwd"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/confirm_pwd"/>
        <EditText
            android:id="@+id/ed_password2"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:background="@color/transparent"
            android:hint="@string/pl_confirm_login_pwd"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider"/>
    <Button
        android:id="@+id/bt_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/btn_textSize"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/c11"
        android:textColor="@color/white"
        android:text="@string/regist"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/have_account"/>
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/c11"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/login_soon"/>
    </LinearLayout>
</LinearLayout>
