<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.iwanna.learn.view.activity.LoginActivity">
    <include layout="@layout/layout_topview"/>
<View
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:background="@color/gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/phone"/>
        <EditText
            android:id="@+id/ed_phone"
            android:inputType="phone"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/pl_input_phone"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:text="@string/password"/>
        <EditText
            android:id="@+id/ed_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:inputType="textPassword"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:background="@color/transparent"
            android:hint="@string/pl_input_password"/>
        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingRight="8dp"
            android:layout_marginRight="12dp"
            android:textSize="@dimen/text_content"
            android:textColor="@color/c11"
            android:text="@string/forget_password"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider"/>
    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/btn_textSize"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/c11"
        android:textColor="@color/white"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/text_color"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/no_account"/>
        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:textColor="@color/c11"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/regist_soon"/>
    </LinearLayout>
</LinearLayout>
