<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_click"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text"
            android:text="@string/name" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:textColor="@color/text_color_6"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:layout_marginLeft="50.5dp"
            android:hint="@string/input_xingming"
            android:textSize="@dimen/text" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider" />
    <LinearLayout
        android:id="@+id/ll_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_click"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text"
            android:text="@string/age" />

        <EditText
            android:id="@+id/ed_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="phone"
            android:background="@color/white"
            android:textColor="@color/text_color_6"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:textSize="@dimen/text"
            android:layout_marginLeft="50.5dp"
            android:hint="@string/input_age1"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider" />
    <LinearLayout
        android:id="@+id/ll_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_click"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text"
            android:text="@string/sex" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="50.5dp"
            android:textColor="@color/text_color_6"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:hint="@string/select"
            android:textSize="@dimen/text" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider" />
</LinearLayout>