<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shadow_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/common_btn_white_bg"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_takePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/common_btn_up_white_bg"
                android:text="@string/take_picture"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider" />

            <Button
                android:id="@+id/btn_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/common_btn_down_white_bg"
                android:text="@string/photo_album"
                android:textColor="@color/black" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/common_btn_white_bg"
            android:text="@string/cancel"
            android:textColor="@color/black" />

    </LinearLayout>

</RelativeLayout>

